# ERTS

./: .gitattributes  .gitignore  README.md
ERTS.Dashboard.Server/Http/: index.html  script.js  style.css
art/: AttitudeIndicator.ai
docs/.library/: bibliography.bib  preamble.tex  style.tex  title.tex
docs/report/: report.sublime-project  report.tex
erts-pc/: Makefile  erts-pc.sln
erts-pc/CRCLib/: CRCLib.cs  CRCLib.csproj
erts-pc/ERTS.Dashboard.Tests/: ERTS.Dashboard.Tests.csproj
erts-pc/ERTSDashboard/: AboutWindow.xaml  App.xaml  App.xaml.cs  DeviceInstanceToStringConverter.cs  ERTS.Dashboard.csproj  ERTSDashboard.csproj  EventExtensions.cs  InputEvent.cs  InputManager.cs  MainWindow.xaml  MainWindow.xaml.cs  Quadrupel.cs  packages.config
erts-pc/EraYaN.Serial/: EraYaN.Serial.csproj  SerialDataEvent.cs  SerialInterface.cs
erts-pc/MicroMvvm/: MicroMvvm.csproj
erts-quad/: Makefile  control.c  erts-quad.c  erts-quad.cpp  erts-quad.h  erts-quad.sublime-project  quad.cpp  quad.h
erts-quad/drivers/: adc.c  baro.c  ble.c  gpio.c  queue.c  spi_flash.c  timers.c  twi.c  uart.c
erts-quad/invensense/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  mpu_wrapper.c
libraries/: Shared.mk
libraries/libcrc-2.0/: Makefile.arm  libcrc.vcxproj  libcrc.vcxproj.filters
libraries/libertscommunication/: Makefile  acknowledge_data.cpp  acknowledge_data.h  actuation_parameter_data.cpp  actuation_parameter_data.h  controller_parameter_data.cpp  controller_parameter_data.h  exception_data.cpp  exception_data.h  flashdump_data.cpp  flashdump_data.h  libertscommunication.vcxproj  libertscommunication.vcxproj.filters  misc_parameter_data.cpp  misc_parameter_data.h  mode_switch_data.cpp  mode_switch_data.h  packet.cpp  packet.h  packet_data.h  packet_datastructures.h  packetdatastructures.h  parameter_data.cpp  parameter_data.h  remote_control_data.cpp  (+3 more)
prototypes/: prototypes.sln
src/: CMakeLists.txt  ERTS.sln
src/CRCLib/: CRCLib.csproj
src/CRCLib/Properties/: AssemblyInfo.cs
src/DesignReporter/: DesignReporter.csproj  Program.cs
src/DesignReporter/Properties/: AssemblyInfo.cs
src/ERTS.Dashboard/: AboutWindow.xaml  AboutWindow.xaml.cs  App.xaml  App.xaml.cs  ERTS.Dashboard.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config  upload.bat
src/ERTS.Dashboard.Server/: ClientConnectedEvent.cs  ClientDisconnectedEvent.cs  ERTS.Dashboard.Server.csproj  InputControlServer.cs  ReceivedInputEvent.cs  SimpleHTTPServer.cs
src/ERTS.Dashboard.Server/Http/: index.html  script.js  style.css
src/ERTS.Dashboard.Server/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
src/ERTS.Dashboard.Tests/: ERTS.Dashboard.Tests.csproj
src/ERTS.Dashboard.Tests/Communication/: PacketTests.cs
src/ERTS.Dashboard.Tests/Properties/: AssemblyInfo.cs
src/ERTS.Dashboard/Communication/: CommunicationInterface.cs  Packet.cs  SentPacket.cs
src/ERTS.Dashboard/Communication/Data/: AcknowledgeData.cs  ActuationParameterData.cs  ControllerParameterData.cs  ExceptionData.cs  FlashData.cs  KillData.cs  MiscParameterData.cs  ModeSwitchData.cs  PackageData.cs  ParameterData.cs  TelemeteryData.cs  TelemetryData.cs
src/ERTS.Dashboard/Communication/Enumerations/: ExceptionType.cs  FlightMode.cs  MessageType.cs
src/ERTS.Dashboard/Control/: Controller.cs
src/ERTS.Dashboard/Helpers/: Databindings.cs  GlobalData.cs  MultimediaTimer.cs
src/ERTS.Dashboard/Input/: ControlActuator.cs  InputBinding.cs  InputEvent.cs  InputManager.cs  PatchBox.cs
src/ERTS.Dashboard/Input/Enumerations/: DirectInputRawOffsets.cs
src/ERTS.Dashboard/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/ERTS.Dashboard/Settings/: ConfigurationViewModel.cs  ControlActuatorToStringConverter.cs  Settings.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
src/ERTS.Dashboard/Utility/: DeviceInstanceToStringConverter.cs  TextBoxTraceListener.cs
src/ERTS.Dashboard/ViewModel/: MainViewModel.cs
src/ERTS.Embedded/: ERTS.Embedded.Fake.vcxproj  ERTS.Embedded.Fake.vcxproj.filters  ERTS.Embedded.WSL.vcxproj  ERTS.Embedded.WSL.vcxproj.filters  ERTS.Embedded.vcxproj  ERTS.Embedded.vcxproj.filters  Makefile  erts-quad.cpp  erts-quad.sublime-project  flash_wrapper.cpp  flash_wrapper.h  make-clean.bat  make-clean.vs.bat  make-rebuild.bat  make-rebuild.vs.bat  make.bat  make.vs.bat  quad.cpp  quad.h  quad_config.h  upload.COM1.bat  upload.COM2.bat  upload.COM4.bat  upload.COM5.bat  upload.COM6.bat  upload.COM7.bat  upload.COM8.bat
src/ERTS.Embedded.Fake/: ERTS.Embedded.Fake.vcxproj  ERTS.Embedded.Fake.vcxproj.filters
src/ERTS.Embedded.Original/: Makefile  in4073.c  lorem.txt
src/ERTS.Embedded.Original/drivers/: uart.c
src/ERTS.Embedded/comm/: acknowledge_data.cpp  acknowledge_data.h  packet.h  remote_control_data.cpp
src/ERTS.Embedded/drivers/: baro.c  driver.h  fake_driver.cpp  flash_wrapper.cpp  flash_wrapper.h  queue.c  timers.c  uart.c
src/ERTS.Embedded/drivers/config/: nrf_drv_config.h
src/ERTS.Embedded/drivers/fake/: fake_driver.cpp  serial.cpp  serial.h
src/ERTS.Embedded/drivers/invensense/: mpu_wrapper.c
src/ERTS.Embedded/invensense/: inv_mpu_dmp_motion_driver.c
src/ERTS.Serial.Test/: main.cpp
src/EraYaN.Serial/: EraYaN.Serial.csproj  ISerial.cs  SerialInterface.cs
src/EraYaN.Serial/Properties/: AssemblyInfo.cs
src/MicroMvvm/: MicroMvvm.csproj  ObservableObject.cs
src/MicroMvvm/Properties/: AssemblyInfo.cs
src/PyFlashParser/: PyFlashParser.py  PyFlashParser.pyproj
src/TimingDividerTests/: Program.cs  TimingDividerTests.csproj
src/TimingDividerTests/Properties/: AssemblyInfo.cs
src/erts-quad/: erts-quad.sublime-project
src/erts-quad/drivers/: adc.c  gpio.c  twi.c  uart.c
src/erts-quad/invensense/: inv_mpu.c
src/flashdump-plotter/: plotter.m
src/flashdump-plotter/parser/: convert.c  plot_parsed.m
src/protocol-test1/: protocol-test1.vcxproj  protocol-test1.vcxproj.filters
src/protocol-test2/: protocol-test2.cpp  protocol-test2.vcxproj  protocol-test2.vcxproj.filters
src/sdl-test/: sdl-test.cpp  sdl-test.vcxproj  sdl-test.vcxproj.filters
(+78 files in other folders)
